--- a/recursos/css/estilo.css
+++ b/recursos/css/estilo.css
@@ -18,9 +18,47 @@ body {
 .cabecalho {
     background-color: #2c3e50;
     color: #fff;
-    text-align: center;
-    padding: 20px;
     z-index: 2;
+}
+
+.menus_selecionar{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    width: 100%;
+}
+
+.movimento_caixa{
+    color: white;
+    text-decoration: none;
+    padding-right: 1%;
+    border-right: 1px solid white;
+}
+
+.dropdown{
+    margin-left: 1%;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #333;
+    padding: 10px;
+    position: fixed;
+    height: 7%;
+    width: 100%;
+}
+
+#dropDownUsuario{
+    color: white;
+}
+
+#logo{
+    color: white;
+    font-size:25px;
+    text-decoration: none;
+    width: 20%;
 }
 
 .principal {
@@ -135,27 +173,6 @@ body {
     position: fixed;
     bottom: 0%;
     width: 100%;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #333;
-    padding: 10px;
-    position: fixed;
-    height: 7%;
-    width: 100%;
-}
-
-#dropDownUsuario{
-    color: white;
-}
-
-#logo{
-    color: white;
-    font-size:25px;
-    text-decoration: none;
 }
 
 #usuario_status label {
