--- a/recursos/css/matrizesCurriculares.css
+++ b/recursos/css/matrizesCurriculares.css
@@ -41,4 +41,49 @@ h1 {
     margin: 1%;
 }
 
+.info_disciplina{
+    width: 100%;
+    height: 80%;
+    margin-top: 2%;
+}
+
+.info_disciplina .topo{
+    display: flex;
+    flex-direction: row;
+}
+
+.info_disciplina .topo .coluna3{
+    display: flex;
+    flex-direction: row; 
+    justify-content: right;
+}
+
+.coluna1{
+    width: 100%; 
+}
+
+.coluna2{
+    width: 100%; 
+}
+
+.coluna3{
+    width: 100%; 
+}
+
+.modal_corpo form{
+    display: flex;
+    flex-direction: column; 
+    justify-content: right;
+}
+
+h1 {
+    text-align: center; 
+}
+
+#novo_disciplina{
+    margin: 1%;
+}
+
+
+
 
